[package]
name = "wt_blk"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Parser and unpacker for the BLK file format"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk"
homepage = "https://github.com/Warthunder-Open-Source-Foundation"
documentation = "https://docs.rs/wt_blk"
exclude = ["samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json ={version = "^1", features = ["preserve_order", "float_roundtrip"]}
serde = {version = "^1", features = ["serde_derive", "rc"]}
thiserror = "^1"
zstd = "0.13.1"
lazy_static = "^1.4.0"
rayon = "1.6"
tracing = "^0.1.37"
memmap2 = "0.9.4"
color-eyre = "^0.6"
strum = { version = "0.26.2", default-features = false, features = ["derive"] }
indexmap = "2.0.0"
cfg-if = "1.0.0"
zip = { version = "0.6.6", features = ["deflate"], default-features = false}
wt_version = "0.1.0"
ryu = "1.0"
md5 = "0.7.0"
fallible-iterator = {version = "0.3.0", features = ["std"] }

[profile.test]
opt-level = 3
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = true

[profile.release]
opt-level = 3
lto = true
debug = true

[dev-dependencies]
pretty_assertions = "1.3.0"
#criterion = "0.4.0"
divan = "0.1.0"

[features]
performance_stamp = []

[[bench]]
name = "blk"
harness = false
path = "benches/blk.rs"
