[package]
name = "wt_blk"
version = "0.3.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Parser and unpacker for the BLK file format"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk"
homepage = "https://github.com/Warthunder-Open-Source-Foundation"
documentation = "https://docs.rs/wt_blk"
exclude = ["samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json ={version = "^1.0", features = ["preserve_order", "float_roundtrip"]}
serde = {version = "^1.0", features = ["serde_derive", "rc"]}
thiserror = "^2.0"
zstd = "^0.13.3"
rayon = "^1.11"
tracing = "^0.1.44"
memmap2 = "^0.9.10"
color-eyre = "^0.6"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
indexmap = "^2.13"
cfg-if = "^1.0"
zip = { version = "8.2", features = ["deflate"], default-features = false}
wt_version = "^0.1.2"
ryu = "^1.0"
md5 = "0.8.0"
fallible-iterator = {version = "^0.3.0", features = ["std"] }
sha1_smol = {version = "^1.0", features = ["std"]}
itertools = "0.14.0"
regex = "1.12.3"
foldhash = "0.2.0"
smallvec = "1.15.1"
memchr = "2.8"
num_enum = "0.7.5"

[profile.test]
#opt-level = 3
debug = true

[profile.bench]
opt-level = 3
lto = true
debug = true

[profile.release]
opt-level = 3
lto = true
debug = true

[dev-dependencies]
pretty_assertions = "^1.4"
#criterion = "0.4.0"
divan = "^0.1.17"

[features]
performance_stamp = []
instrument_binary_blk = []

[[bench]]
name = "blk"
harness = false
path = "benches/blk.rs"
